<resources>
    <string name="app_name">Almari</string>
    <string name="search">search</string>
    <string name="enter_your_word">input clothes type</string>
    <string name="add_image">add image</string>
    <string name="add_your_image">add your image</string>
    <string name="main_text">what colors do you want to wear today?</string>
    <string name="colorName">color</string>
    <string name="recomendations">Recomendations</string>
    <string name="see_all">see all</string>
    <string name="morning_daytime">morning_daytime</string>
    <string name="see_recomendations">see recomendations</string>
    <string name="home">Home</string>
    <string name="wardrobe">Wardrobe</string>
    <string name="add_clothes">Add Clothes</string>
    <string name="log_out">Log Out</string>
    <string name="add_button">add button</string>
    <string name="hi_user">Hi User!</string>
    <string name="add_clothes_text">Let’s add some more clothes to your wardrobe</string>
    <string name="classify">classify the clothes into top or pants</string>
    <string name="hello_user">Hello User!</string>
    <string name="submit">submit</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="shape">shape</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="regist_text">Let\'s Start Our Journey!</string>
    <string name="not_have_an_account">Not have an account? </string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="gallery">Gallery</string>
    <string name="image_preview">image_preview</string>
</resources>